--- a/MyDocs/FirstCategories/SecondCategories/ObjectViewController.storyboard
+++ b/MyDocs/FirstCategories/SecondCategories/ObjectViewController.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -32,9 +32,9 @@
                                 <sections/>
                             </tableView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j1U-4v-zj4">
-                                <rect key="frame" x="125" y="44" width="140" height="30"/>
+                                <rect key="frame" x="93" y="44" width="200" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="140" id="jOn-ge-pSp"/>
+                                    <constraint firstAttribute="width" constant="200" id="jOn-ge-pSp"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="26"/>
                                 <color key="textColor" systemColor="tintColor"/>
@@ -51,6 +51,15 @@
                                     <action selector="addDocButton:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="BVc-z6-F4m"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lxh-FR-EWE">
+                                <rect key="frame" x="297" y="53" width="30" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain"/>
+                                <connections>
+                                    <action selector="editCategoryButton:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="7CV-03-3Mb"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -58,21 +67,22 @@
                             <constraint firstItem="0j9-z9-ZNn" firstAttribute="top" secondItem="HBk-p6-O8S" secondAttribute="top" id="2gZ-CF-9sv"/>
                             <constraint firstItem="lqE-UB-AVi" firstAttribute="bottom" secondItem="vDu-zF-Fre" secondAttribute="bottom" id="8BS-uI-wYp"/>
                             <constraint firstItem="HBk-p6-O8S" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="10" id="Auo-rx-me9"/>
-                            <constraint firstItem="j1U-4v-zj4" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="Hyt-4y-EPf"/>
+                            <constraint firstItem="j1U-4v-zj4" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" constant="-2" id="Hyt-4y-EPf"/>
                             <constraint firstItem="lqE-UB-AVi" firstAttribute="top" secondItem="0j9-z9-ZNn" secondAttribute="bottom" constant="6.6666666666666856" id="ODN-gT-aJF"/>
-                            <constraint firstItem="j1U-4v-zj4" firstAttribute="leading" secondItem="HBk-p6-O8S" secondAttribute="trailing" constant="25" id="OtW-au-ZjQ"/>
+                            <constraint firstItem="j1U-4v-zj4" firstAttribute="leading" secondItem="HBk-p6-O8S" secondAttribute="trailing" constant="-7" id="OtW-au-ZjQ"/>
                             <constraint firstItem="lqE-UB-AVi" firstAttribute="top" secondItem="j1U-4v-zj4" secondAttribute="bottom" constant="16.666666666666671" id="S9d-zh-pOV"/>
                             <constraint firstItem="HBk-p6-O8S" firstAttribute="leading" secondItem="5EZ-qb-Rvc" secondAttribute="leadingMargin" id="WeA-Ak-PqJ"/>
                             <constraint firstItem="0j9-z9-ZNn" firstAttribute="trailing" secondItem="5EZ-qb-Rvc" secondAttribute="trailingMargin" id="jUo-3O-HNd"/>
                             <constraint firstItem="j1U-4v-zj4" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="k5J-vr-J9v"/>
                             <constraint firstItem="lqE-UB-AVi" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="l5u-sx-KXr"/>
-                            <constraint firstItem="j1U-4v-zj4" firstAttribute="centerX" secondItem="lqE-UB-AVi" secondAttribute="centerX" id="wVT-pi-tuY"/>
+                            <constraint firstItem="j1U-4v-zj4" firstAttribute="centerX" secondItem="lqE-UB-AVi" secondAttribute="centerX" constant="-2" id="wVT-pi-tuY"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="addDocButton" destination="0j9-z9-ZNn" id="WL3-G5-kmc"/>
                         <outlet property="backButton" destination="HBk-p6-O8S" id="ZWT-6d-90X"/>
                         <outlet property="docTableView" destination="lqE-UB-AVi" id="fzN-r8-wXp"/>
+                        <outlet property="editCategoryButton" destination="lxh-FR-EWE" id="Seu-FZ-qzs"/>
                         <outlet property="secondLabel" destination="j1U-4v-zj4" id="ix2-mT-SQc"/>
                     </connections>
                 </viewController>
